--- a/productsPage.html
+++ b/productsPage.html
@@ -10,7 +10,7 @@
 <body>
 <header><h2></br></br></br><img src="easy.gif" alt="Welcome to easy shopping!" /></h2> </header>
 <div class="topnav">
-  <a class="active" href="HomePage.html">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href = "LoginPage.html" alignment="center" > Login </a>
   <a href = "RegisterPage.html" alignment="center" > Register </a>
   <a href = "productsPage.html" alignment="center" > Products </a>
