--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </video>
 <div class="position">
 <div class="log">
-<form action="loginpage.html">
+<form action="LoginPage.html">
     <input type="submit" value="login Page" style="background-color:red; font-size:18px;" />
 </form>
 </div>
 </br> </br> </br>
 <div class="regi">
-<form action="registerpage.html">
+<form action="RegisterPage.html">
     <input type="submit" value="Register Page" style="background-color:red; font-size:18px;" />
 </form>
 </div>
