--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 <header><h2></br></br></br><img src="easy.gif" alt="Welcome to easy shopping!" /></h2> </header>
+</head>
+    <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a <a href = "LoginPage.html" alignment="center" > Login </a>
+	<a href = "RegisterPage.html" alignment="center" > Register </a>
+	<a href = "productsPage.html" alignment="center" > Products </a>
+	<a href = "AboutUsPage.html" alignment="center" > About Us </a>
+</div>
 
 </br>
 <video autoplay muted loop class="myVideo">
